# tsftl-lab

./: .gitignore  .hlint.yaml  LICENSE  README.md  cabal.project  cabal.project.local  cargo.toml  lab.cabal  tsftl-lab.cabal
add-inplace/: README.md  add-inplace.cabal
add-inplace/bench/: Main.hs
add-inplace/src/: Prototype.hs  Unique.hs
add-inplace/src/Control/Monad/ST/Unsafe/: Extra.hs
add-inplace/src/Data/: Unique.hs  Var.hs  WordArray.hs
add-inplace/src/Data/BigNat/Inplace/: Linear.hs  ST.hs  Unique.hs
add-inplace/src/Data/PrimArray/: Unique.hs
app/: Main.hs
calculus/: LICENSE  Linear.hs  List.hs  MVector.hs  Main.hs  Prof.sh  README.md  Vector.hs  cabal.project.local  calculus.cabal  cargo.toml  profile.sh
calculus/app/: Main.hs  Main.rs
calculus/bench/: Main.hs  Main.rs
calculus/liquid/Data/Array/Mutable/: Linear_LHAssumptions.hs
calculus/liquid/Data/Vector/: Generic_LHAssumptions.hs
calculus/liquid/Data/Vector/Generic/: Mutable_LHAssumptions.hs
calculus/math/: README.tex
calculus/src/Calculus/: Linear.hs  List.hs  MVector.hs  MVector.rs  Vector.hs
calculus/src/Calculus/Liquid/: Linear.hs  MVector.hs
gauss/: Prof.sh  README.md  gauss.cabal
gauss/app/: Main.hs
gauss/bench/: Main.hs
gauss/misc/Data/: Stalk.hs
gauss/misc/Data/List/: UnfoldST.hs
gauss/misc/Data/Stalk/: UnfoldST.hs
gauss/src/: Fruit.hs  Match.hs  Misc.hs  Polynomy.hs
gauss/src/Data/: Stalk.hs
gauss/src/Data/Match/: Count.hs  KeyStatus.hs  ValStatus.hs
gauss/src/Data/Maybe/: Strict.hs
gauss/src/Data/Primitive/: MutablePrimArraySlice.hs
gauss/src/Data/Primitive/PrimArray/: Slice.hs
gauss/src/Data/Stalk/: UnfoldST.hs
gauss/test/: Main.hs
opt-stop/: README.md  opt-stop.cabal
opt-stop/app/: Main.hs
opt-stop/src/: OptStop.hs
opt-stop/src/Data/Stream/: Strict.hs
opt-stop/src/Math/Calculus/: Simpson.hs
src/: Calculus.hs  permOrd.hs  qiaochu.hs  trig.hs
src/Calculus/: Linear.hs  List.hs  MVector.hs  Main.hs  Vector.hs
src/clutter/: gauss.hs  guess.hs  misc.hs  pandora.hs
unique-array/: README.md  unique-array.cabal
unique-array/src/: AllocBytes-old.hs  AllocBytes.hs  AllocBytesPrimOps.cmm  Unique.hs
unique-array/src/Data/: ForeignArray.hs  PrimArray.hs
unique-array/src/Data/ForeignArray/: Linear.hs
unique-array/src/Data/PrimArray/: Unique.hs
