cabal-version:    3.0
build-type:       Simple

name:             tsftl-lab
version:          0.1.0.0
category:         miscellany
synopsis:         Test environment to build otherwise standalone .hs files with dependencies

author:           thesnakefromthelemma
maintainer:       thesnakefromthelemma@gmail.com
license:          BSD-3-Clause
license-file:     LICENSE


Flag                llvm
    Description:    Build with llvm
    Default:        False
    Manual:         True

Flag                eager
    Description:    Generic "force thunks" flag---usage varies by module
    Default:        True
    Manual:         False

Flag                boxed
    Description:    Generic "don't unbox data" flag---usage varies by module
    Default:        True
    Manual:         False

Flag                list
    Description:    Generic "Contain data with list" flag---usage varies by module
    Default:        False
    Manual:         True

Flag                vector
    Description:    Generic "Contain data with vector" flag---usage varies by module
    Default:        False
    Manual:         True

Flag                mvector
    Description:    Generic "Contain data with mvector" flag---usage varies by module
    Default:        False
    Manual:         True

Flag                linear
    Description:    Generic "Contain data with linear marray" flag---usage varies by module
    Default:        False
    Manual:         True


common                   common

    build-depends:       base >= 4.18 && < 4.22

    default-language:    Haskell2010

    if flag(eager)
        cpp-options:     -DEAGER=1
    else
        cpp-options:     -DEAGER=0

    if flag(boxed)
        cpp-options:     -DBOXED=1
    else
        cpp-options:     -DBOXED=0

    ghc-options:         -Wall
                         -O2
                         -rtsopts -prof

    if flag(llvm)
        ghc-options:     -fllvm


executable              calculus

    import:             common
    
    build-depends:      deepseq >= 1.2 && < 1.6
                 ,      vector >= 0.13.2 && < 1.4
                 ,      transformers ^>= 0.6
                 ,      linear-base >= 0.3 && < 0.6
                 ,      random >= 1.3 && < 1.4

    hs-source-dirs:     calculus

    main-is:            Main.hs

    if flag(list)
        cpp-options:    -DLIST=1
    else
        cpp-options:    -DLIST=0
    if flag(vector)
        cpp-options:    -DVECTOR=1
    else
        cpp-options:    -DVECTOR=0
    if flag(mvector)
        cpp-options:    -DMVECTOR=1
    else
        cpp-options:    -DMVECTOR=0
    if flag(linear)
        cpp-options:    -DLINEAR=1
    else
        cpp-options:    -DLINEAR=0

    other-modules:      List
                        Vector
                        MVector
                        Linear