cabal-version:       3.0
build-type:          Simple

name:                tsftl-lab-add-inplace
version:             0.1.0.0
category:            math
synopsis:            Linear inplace big natural addition via uniqueness types via the ST quantification trick

author:              thesnakefromthelemma
maintainer:          rafayaashary01@gmail.com
license:             BSD-3-Clause
license-file:        ../LICENSE

extra-doc-files:     README.md

source-repository    head
    type:            git
    location:        https://github.com/thesnakefromthelemma/tsftl-lab/add-inplace


-- * Common

common                   common

    build-depends:       base >= 4.21 && < 4.22

    default-language:    Haskell2010

    ghc-options:         -Wall
                         -fexpose-all-unfoldings
                         -fspecialize-aggressively
                         -O2


-- * Library

library

    import:             common

    hs-source-dirs:     src

    build-depends:      primitive >= 0.9.1 && < 0.10
                 ,      ghc-bignum >= 1.1 && < 1.4

    exposed-modules:    Prototype
                        Data.BigNat.Inplace.ST
                        Data.BigNat.Inplace.Unique
                        Data.BigNat.Inplace.Linear


-- * Benchmark

executable               prototype-bench

    hs-source-dirs:      bench

    build-depends:       base >= 4.21 && < 4.22
                 ,       tsftl-lab-add-inplace

    default-language:    Haskell2010

    main-is:             Main.hs