cabal-version:       3.0
build-type:          Simple

name:                tsftl-lab-calculus
version:             0.1.0.0
category:            math
synopsis:            Least degree polynomial interpolation on evenly spaced input sets via assorted container types.

author:              thesnakefromthelemma
maintainer:          rafayaashary01@gmail.com
license:             BSD-3-Clause
license-file:        ../LICENSE

extra-doc-files:     README.md

source-repository    head
    type:            git
    location:        https://github.com/thesnakefromthelemma/tsftl-lab/calculus


-- * Common

Flag                     eager
    Description:         Generic "force thunks" flag---usage varies by module
    Default:             True
    Manual:              False

Flag                     liquid
    Description:         Build with liquidhaskell (expensive!)
    Default:             False
    Manual:              True

common                   common

    build-depends:       base >= 4.18 && < 4.22

    default-language:    Haskell2010

    ghc-options:         -Wall
                         -fexpose-all-unfoldings
                         -fspecialize-aggressively
                         -O2


-- * Liquid

library                     calculus-liquid

    import:                 common

    if flag(liquid)
        build-depends:      vector >= 0.13.2 && < 0.14
                     ,      linear-base >= 0.3 && < 0.6
                     ,      liquidhaskell ^>= 0.9
    
    hs-source-dirs:         liquid

    if flag(liquid)
        exposed-modules:    Data.Vector.Generic.Mutable_LHAssumptions
                            Data.Vector.Generic_LHAssumptions
                            Data.Array.Mutable.Linear_LHAssumptions


-- * Library

library                    calculus-lib

    import:                common

    build-depends:         deepseq >= 1.2 && < 1.6
                 ,         vector >= 0.13.2 && < 0.14
                 ,         linear-base >= 0.3 && < 0.6
    if flag(liquid)
        build-depends:     liquidhaskell ^>= 0.9
                     ,     calculus-liquid

    hs-source-dirs:        src

    if flag(eager)
        cpp-options:       -DEAGER=1
    else
        cpp-options:       -DEAGER=0

    exposed-modules:       Calculus.List
                           Calculus.Vector
                           Calculus.MVector
                           Calculus.Linear

    if flag(liquid)
        other-modules:     Calculus.Liquid.MVector
                           Calculus.Liquid.Linear


-- * Bench

Flag                    list
    Description:        Use 'Calculus.List'
    Default:            False
    Manual:             True

Flag                    vector
    Description:        Use 'Calculus.Vector'
    Default:            False
    Manual:             True

Flag                    mvector
    Description:        Use 'Calculus.MVector'
    Default:            False
    Manual:             True

Flag                    linear
    Description:        Use 'Calculus.Linear'
    Default:            False
    Manual:             True

Flag                    boxed
    Description:        Use boxed 'Data.Vector.Generic.Vector' instance (whether eager or lazy)
    Default:            True
    Manual:             False

executable              calculus-bench

    import:             common
    
    build-depends:      calculus-lib
                 ,      vector >= 0.13.2 && < 0.14
                 ,      random >= 1.3 && < 1.4

    hs-source-dirs:     bench

    main-is:            Main.hs

    if flag(eager)
        cpp-options:    -DEAGER=1
    else
        cpp-options:    -DEAGER=0

    if flag(boxed)
        cpp-options:    -DBOXED=1
    else
        cpp-options:    -DBOXED=0

    if flag(list)
        cpp-options:    -DLIST=1
    else
        cpp-options:    -DLIST=0

    if flag(vector)
        cpp-options:    -DVECTOR=1
    else
        cpp-options:    -DVECTOR=0

    if flag(mvector)
        cpp-options:    -DMVECTOR=1
    else
        cpp-options:    -DMVECTOR=0

    if flag(linear)
        cpp-options:    -DLINEAR=1
    else
        cpp-options:    -DLINEAR=0

    ghc-options:        -ddump-to-file
                        -ddump-simpl
                        -dno-typeable-binds
                        -dsuppress-idinfo
                        -dsuppress-coercions
                        -dsuppress-type-applications
                        -dsuppress-module-prefixes
