cabal-version:       3.0
build-type:          Simple

name:                tsftl-lab-opt-stop
version:             0.1.0.0
category:            math
synopsis:            Motivating baby's first optimal stopping solution via 'Data.Function.fix'

author:              thesnakefromthelemma
maintainer:          thesnakefromthelemma@gmail.com
license:             BSD-3-Clause
license-file:        ../LICENSE

extra-doc-files:     README.md

source-repository    head
    type:            git
    location:        https://github.com/thesnakefromthelemma/tsftl-lab/opt-stop


-- * Common

common                   common

    build-depends:       base >= 4.18 && < 4.22

    default-language:    Haskell2010

    ghc-options:         -Wall
                         -fexpose-all-unfoldings
                         -fspecialize-aggressively
                         -O2


-- * Library

library                 opt-stop

    import:             common

    build-depends:      hashable >= 1.5 && < 1.6
                 ,      unordered-containers >= 0.2 && < 0.3
                 ,      transformers >= 0.6 && < 0.7

    hs-source-dirs:     src

    exposed-modules:    OptStop


-- * Executable

executable              opt-stop-exe

    import:             common
    
    build-depends:      opt-stop
                 ,      random >= 1.3 && < 1.4
                 ,      transformers >= 0.6 && < 0.7

    hs-source-dirs:     app

    main-is:            Main.hs

    ghc-options:        -rtsopts -prof