cabal-version:       3.0
build-type:          Simple

name:                tsftl-lab-unique-array
version:             0.1.0.0
category:            math
synopsis:            Unique and uniquely-linear primarrays, the latter allocated off the garbage-collected heap

author:              thesnakefromthelemma
maintainer:          rafayaashary01@gmail.com
license:             BSD-3-Clause
license-file:        ../LICENSE

extra-doc-files:     README.md

source-repository    head
    type:            git
    location:        https://github.com/thesnakefromthelemma/tsftl-lab/unique-array


-- * Common

common                   common

    build-depends:       base >= 4.21 && < 4.22

    default-language:    Haskell2010

    ghc-options:         -Wall
                         -fexpose-all-unfoldings
                         -fspecialize-aggressively
                         -O2


-- * Library

library

    import:             common

    hs-source-dirs:     src

    build-depends:      template-haskell >= 2.23 && < 2.24
                 ,      primitive >= 0.9.1 && < 0.10
                 ,      linear-base >= 0.5 && < 0.6

    c-sources:          src/AllocBytesPrimOps.cmm

    exposed-modules:    Unique
                        Data.PrimArray
                        Data.PrimArray.Unique
                        AllocBytes
                        Data.ForeignArray
                        Data.ForeignArray.Linear